mobile overflow fixed

--- a/scss/2-base/_reset.scss
+++ b/scss/2-base/_reset.scss
@@ -108,3 +108,7 @@ input {
     -webkit-appearance: none;
     border-radius: 0;
 }
+
+.wrapper {
+    overflow: hidden;
+}
